Use attemptId/routeKey & immutable JSON payloads
Rename transport correlation identity and strengthen payload boundaries: correlationKey is replaced with explicit attemptId (and traceId exposure) across DispatchOutcome, TransportDispatchEnvelope, TransportPacket and related APIs; TransportResultEnvelope now carries routeKey and routeKey is used as the transport address truth. TransportPacket.payload and TaskResultReport.output/input are now Maps and are defensively copied as immutable JSON-object boundaries (Map.copyOf/Map.of), and TaskDispatchItem's mergedPayload helper was removed. Delivery APIs were adjusted: pollPayloads -> pollEnvelopes (returns envelopes) with a TransportDeliveryService.toDispatchItem helper; TransportDispatchEnvelopeFactory and adapters (socket, websocket, polling) updated to propagate routeKey/traceId and log attemptId/traceId. Runtime logic and tests updated to reflect runtime-lease-first convergence and bounded recreation of missing attempt projections; documentation updated accordingly. Minor test and logging updates applied and an obsolete RuntimeLeaseProjectionSupport class was removed.